crates/ts-doc/tests/snapshots/package__builtins__referenced_function.snap
---
source: tests/package.rs
expression: "package_one(\"function foo() {\\n  return 'foo';\\n}\\nexport let d = foo();\")"
---
{
  "exports": {
    "d": {
      "type": "any"
    }
  },
  "links": {}
}
