crates/ts-doc/tests/snapshots/package__builtins__referenced_string.snap
---
source: tests/package.rs
expression: "package_one(\"let name = 'foo';\\nexport let c = name;\")"
---
{
  "exports": {
    "c": {
      "type": "string",
      "value": "foo"
    }
  },
  "links": {}
}
