crates/ts-doc/tests/snapshots/package__builtins__static_number.snap
---
source: tests/package.rs
expression: "package_one(\"export let a: number = 4;\")"
---
{
  "exports": {
    "a": {
      "type": "number"
    }
  },
  "links": {}
}
