crates/ts-doc/tests/snapshots/package__builtins__static_string.snap
---
source: tests/package.rs
expression: "package_one(r#\"export let b: string = \"foo\";\"#)"
---
{
  "exports": {
    "b": {
      "type": "string"
    }
  },
  "links": {}
}
